<resources>
    <string name="app_name">MyHealthApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_intent_filter_label">MyHealthApp</string>
    <string name="std_close">Cerrar</string>
    <string name="std_unknown_err">Error desconocido</string>
    <string name="premissions_req">Solicitud de permisos</string>

    <string name="api_base_url"><![CDATA[https://tdp2-crmedical-api.herokuapp.com]]></string>

    <!-- CONTEXT MENU ************************************************************************ -->
    <string name="main_menu_logout_title">Cerrar sesion</string>
    <string name="main_menu_profile_title">Mi perfil</string>


    <!-- PERMISSIONS *********************************************************************** -->
    <string name="internet_perm_reject">Se necesita acceso a internet</string>
    <string name="network_perm_reject">Se necesita acceso a internet</string>
    <string name="location_perm_reject">Se necesita acceso a la geolocalizaci\u00F3n</string>

    <!-- LOGIN *********************************************************************** -->
    <string name="login_title">Bienvenido</string>
    <string name="login_subtitle">Iniciar sesi\u00F3n</string>
    <string name="login_login_btn_text">Iniciar sesi\u00F3n</string>
    <!-- \u00f1 es la ENIE en UTF-8 -->
    <string name="login_password_hint">Contrase\u00F1a</string>
    <string name="login_id_hint">DNI</string>
    <string name="login_signup_btn_text">Registrarse</string>
    <string name="login_logo_desc">Bienvenido a MyHealthApp</string>
    <string name="login_revover_pass_btn">¿Olvid\u00F3 su contrase\u00F1a?</string>

    <string name="login_id_error_msg">DNI inv\u00E1lido</string>
    <string name="login_password_err_msg">Contrase\u00F1a inv\u00E1lida</string>
    <string name="login_password_err_short_msg">Contrase\u00F1a debe tener al menos 8 caracteres</string>
    <string name="login_password_err_invalid_msg">La contrase\u00F1a debe tener al menos 8 caracteres. Tienen que tener al menos un n\u00FAmero y una letra</string>
    <string name="login_err_403_msg">Verificar datos ingresados. Usuario o contrase\u00F1a ingresados inv\u00E1lidos</string>
    <string name="login_dialog_title_err_msg">Error de inicio de sesi\u00F3n</string>


    <string name="login_url"><![CDATA[http://foo.bar.com/login]]></string>

    <!-- SIGNUP *********************************************************************** -->
    <string name="signup_background_contentDescription">Fondo</string>
    <string name="signup_title">Registro</string>
    <string name="signup_firstname_hint">Nombres</string>
    <string name="signup_lastname_hint">Apellidos</string>
    <string name="signup_birth_hint">Fecha de nacimiento</string>
    <string name="signup_btn_text">Registrarse</string>
    <string name="signup_id_hint">DNI</string>
    <string name="signup_member_hint">N\u00FAmero de afiliado</string>
    <string name="signup_email_hint">Email</string>
    <string name="signup_password_hint">Contrase\u00F1a</string>
    <string name="signup_repeat_password_hint">Repetir contrase\u00F1a</string>
    <string name="signup_id_error_msg">DNI inv\u00E1lido</string>
    <string name="signup_password_err_invalid_msg">La contrase\u00F1a debe tener al menos 8 caraccteres y contener letras y n\u00FAmeros</string>
    <string name="signup_plan_hint">Plan</string>
    <string name="signup_fname_err">Ingrese su nombre</string>
    <string name="signup_lname_err">Ingrese su apellido</string>
    <string name="signup_email_err">Direcci\u00F3n de correo inv\u00E1lida</string>
    <string name="signup_id_err">DNI inv\u00E1lido</string>
    <string name="signup_member_err">N\u00FAmero de afiliado inv\u00E1lido</string>
    <string name="signup_reppass_err">Las contrase\u00F1as no coinciden</string>
    <string name="signup_plan_err">Plan inexistente</string>
    <string name="signup_unkerr_dialog_title">Error de registro</string>
    <string name="signup_unkerr_dialog_msg">Ocurri\u00F3 un error inesperado al registrar el afiliado. Espere unos instantes y reint\u00E9ntelo.</string>
    <string name="signup_birth_err">Ingrese su fecha de nacimiento</string>
    <string name="signup_invalid_form_err">No se encuentra afiliado a MyHealth. Por favor comuniquese a 0800-MYHEALTH</string>

    <!-- MAPS *********************************************************************** -->
    <string name="maps_err_noloc_msg">No se tiene acceso a la localizaci\u00F3n</string>
    <string name="maps_loc_found_msg">Localizaci\u00F3n obtenida</string>

    <string name="prof_map_radio_prompt">Distancia</string>
    <string name="prof_map_specialty_prompt">Especialidad</string>
    <string name="prof_map_no_results">No se encontraron profesionales con los filtros indicados</string>
    <string name="prof_map_no_filters">Debe ingresar valores en los filtros</string>
    <string name="prof_map_dialog_err_title">Error al buscar profesionales</string>
    <string name="prof_map_dialog_err_msg">Ocurrio un error al obtener profesionales cercanos</string>

    <string name="san_map_radio_prompt">Distancia</string>
    <string name="san_map_specialty_prompt">Especialidad</string>
    <string name="san_map_no_results">No se encontraron sanatorios con los filtros indicados</string>
    <string name="san_map_no_filters">Debe ingresar valores en los filtros</string>
    <string name="san_map_dialog_err_title">Error al buscar sanatorios</string>
    <string name="san_map_dialog_err_msg">Ocurrio un error al obtener sanatorios cercanos</string>


    <!-- HUB *********************************************************************** -->
    <string name="main_hub_title">Bienvenido %1$s</string>

    <!-- SEARCH_PROFESSIONALS****************************************************************** -->
    <string name="prof_search_title">Listar Profesionales</string>
    <string name="prof_search_name_hint">Nombre</string>
    <string name="prof_search_specialty_hint">Especialidad</string>
    <string name="prof_search_checktype_hint">Tipo de estudio</string>
    <string name="prof_search_zone_hint">Localidad</string>
    <string name="prof_search_btn_text">Buscar</string>
    <string name="prof_search_empty_results">No se encontraron resultados para la b\u00FAsqueda realizada. Puede ampliar su b\u00FAsqueda llamando a 0800-MYHEALTH</string>
    <string name="prof_search_no_filters">Por favor ingrese al menos un filtro para realizar la b\u00FAsqueda</string>
    <string name="prof_search_err_dialog_title">Error en la b\u00FAsqueda</string>
    <string name="prof_search_err_dialog_msg">Ocurri\u00F3 un error al buscar profesionales. Int\u00E9ntelo nuevamente m\u00E1s tarde</string>

    <!-- SEARCH_SANATORIUMS****************************************************************** -->
    <string name="san_search_title">Listar Sanatorios</string>
    <string name="san_search_name_hint">Nombre</string>
    <string name="san_search_specialty_hint">Especialidad</string>
    <string name="san_search_checktype_hint">Tipo de estudio</string>
    <string name="san_search_zone_hint">Localidad</string>
    <string name="san_search_btn_text">Buscar</string>
    <string name="san_search_empty_results">No se encontraron resultados para la b\u00FAsqueda realizada. Puede ampliar su b\u00FAsqueda llamando a 0800-MYHEALTH</string>
    <string name="san_search_no_filters">Por favor ingrese al menos un filtro para realizar la b\u00FAsqueda</string>
    <string name="san_search_err_dialog_title">Error en la b\u00FAsqueda</string>
    <string name="san_search_err_dialog_msg">Ocurri\u00F3 un error al buscar sanatorios. Int\u00E9ntelo nuevamente m\u00E1s tarde</string>

    <!-- PROF_CARD****************************************************************** -->
    <string name="prof_card_specialty">Especialidades: %1$s</string>
    <string name="prof_card_langs">Idiomas: %1$s</string>
    <string name="prof_card_plans">Plan: %1$s</string>
    <string name="prof_card_emails">Emails: %1$s</string>
    <string name="prof_card_offices">Oficinas: %1$s</string>

    <!-- SAN_CARD****************************************************************** -->
    <string name="san_card_specialty">Especialidades: %1$s</string>
    <string name="san_card_langs">Idiomas: %1$s</string>
    <string name="san_card_plans">Plan: %1$s</string>
    <string name="san_card_emails">Emails: %1$s</string>
    <string name="san_card_offices">Oficinas: %1$s</string>

    <!-- NEW CHECK************************************************************************** -->
    <string name="newcheck_img_contentDesc">Receta de estudio</string>
    <string name="newcheck_title_text">Nuevo Estudio</string>
    <string name="newcheck_btn_text">Solicitar estudio</string>
    <string name="newcheck_no_img">Seleccione una imagen</string>

    <!-- CHECK_CARD************************************************************************* -->
    <string name="check_card_specialty">Especialidad: %1$s</string>
    <string name="check_card_checktype">Tipo de estudio: %1$s</string>
    <string name="check_card_date">Fecha de alta: %1$s</string>
    <string name="check_card_update">Fecha de actualizaci\u00F3n: %1$s</string>
    <string name="check_card_status">%1$s</string>


    <!-- CHECK_DETAIL************************************************************************* -->
    <string name="check_detail_specialty">Especialidad: %1$s</string>
    <string name="check_detail_checktype">Tipo de estudio: %1$s</string>
    <string name="check_detail_date">Fecha de alta: %1$s</string>
    <string name="check_detail_update">Fecha de actualizaci\u00F3n: %1$s</string>
    <string name="check_detail_status">%1$s</string>
    <string name="check_detail_obs">%1$s</string>
    <string name="default_notification_channel_id">notif_channel</string>


</resources>
